--- a/src/menu/index.module.css
+++ b/src/menu/index.module.css
@@ -21,6 +21,7 @@
   width: 50px;
   background-color: #53d5ff;
   border-radius: 100% 0 0 100%/30% 0 0 30%;
+  box-shadow: -2px 0px 5px 1px #a1a1a1;
 }
 
 .button > div {
@@ -54,4 +55,5 @@
   width: 450px;
   background-color: whitesmoke;
   overflow: hidden;
+  box-shadow: 0px 0px 5px 1px #a1a1a1;
 }
